--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ url: "https://reads.nadege.es" # the base hostname & protocol for your site, e.g
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+author: Mallory Knodel # add your name
+author-img: mallory.jpg # add your photo
+about-author: I integrate a human rights, people-centered approach to communications and technology work for social justice movements, specializing in cybersecurity policy advocacy.. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: artemsheludko # add your Github handle
